# bazel-goboring

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
.github/workflows/: build.yaml
boring/: BUILD.bazel  boring.go  notboring.go
buildcolor/: BUILD.bazel  blue.go  red.go
