load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/connyay/bazel-goboring",
    visibility = ["//visibility:private"],
    deps = [
        "//boring",
    ],
)

go_binary(
    name = "bin",
    embed = [":lib"],
    # cgo = True,
    goarch = "amd64",
    goos = "linux",
    gotags = ["goexperiment.boringcrypto"],
    visibility = ["//visibility:public"],
)
